--- a/biodata.html
+++ b/biodata.html
@@ -347,7 +347,7 @@
   </div>
   <div class="profile-section">
     <div class="profile-image">
-      <img src="chandan.jpg" alt="Chandan Kumar" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+      <img src="ck.jpg" alt="Chandan Kumar" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
       <div class="profile-initial">C</div>
     </div>
     <h1 class="name-header">Chandan Kumar</h1>
