--- a/portfolio.html
+++ b/portfolio.html
@@ -927,7 +927,7 @@
             </div>
             <div class="profile-section">
                 <div class="profile-image">
-                    <img src="chandan.jpg" alt="Chandan Kumar" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                    <img src="ck.jpg" alt="Chandan Kumar" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                     <div class="profile-image-fallback">Image Not Available</div>
                 </div>
                 <div class="profile-text">
