--- a/portfolio.html
+++ b/portfolio.html
@@ -1020,7 +1020,7 @@
                             </div>
                         </div>
                         <div class="profile-photo">
-                            <img src="chandan.jpg" alt="Chandan Kumar" onerror="this.style.display='none';this.nextElementSibling.style.display='block';">
+                            <img src="ck.jpg" alt="Chandan Kumar" onerror="this.style.display='none';this.nextElementSibling.style.display='block';">
                             <div class="profile-photo-fallback">Image Not Available</div>
                         </div>
                     </header>
