--- a/resume.html
+++ b/resume.html
@@ -10,54 +10,53 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
     :root {
-      --primary-color: #1976D2;
+      --primary-color: #1E88E5;
       --secondary-color: #42A5F5;
-      --accent-color: #FFB300;
+      --accent-color: #FFCA28;
       --text-color: #212121;
       --light-gray: #F5F5F5;
       --border-color: #E0E0E0;
-      --background-color: #FFFFFF;
+      --background-color: #FAFAFA;
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       font-family: 'Roboto', sans-serif;
       color: var(--text-color);
-      line-height: 1.5;
+      line-height: 1.4;
       background-color: var(--background-color);
-      font-size: 11px;
+      font-size: 12px;
       font-weight: 400;
     }
     .container {
       width: 210mm;
       height: 297mm;
-      margin: 10px auto;
+      margin: 0 auto;
       background-color: white;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.08);
-      padding: 6mm;
+      box-shadow: 0 6px 24px rgba(0,0,0,0.1);
+      padding: 0 8mm 8mm 8mm;
+      position: relative;
       overflow: hidden;
-      border-radius: 6px;
+      border-radius: 8px;
     }
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 4px 8px;
-      margin-bottom: 5px;
+      padding: 2px 6px;
+      margin-bottom: 4px;
       border-bottom: 2px solid var(--primary-color);
-      background: linear-gradient(90deg, var(--primary-color), var(--secondary-color));
-      color: white;
     }
     .profile-section {
       display: flex;
       align-items: center;
-      gap: 6px;
+      gap: 8px;
     }
     .profile-image {
-      width: 36px;
-      height: 36px;
+      width: 48px;
+      height: 48px;
       border-radius: 50%;
       overflow: hidden;
-      border: 1px solid white;
+      border: 2px solid var(--border-color);
     }
     .profile-image img {
       width: 100%;
@@ -67,12 +66,12 @@
     .profile-image-fallback {
       display: none;
       background-color: var(--light-gray);
-      width: 36px;
-      height: 36px;
+      width: 48px;
+      height: 48px;
       border-radius: 50%;
       text-align: center;
-      line-height: 36px;
-      font-size: 7px;
+      line-height: 48px;
+      font-size: 8px;
       color: #666;
     }
     .profile-details {
@@ -80,19 +79,20 @@
       flex-direction: column;
     }
     .profile-name {
-      font-size: 14px;
+      font-size: 15px;
       font-weight: 700;
       letter-spacing: 0.2px;
+      color: var(--text-color);
     }
     .profile-title {
-      font-size: 9px;
-      font-weight: 400;
+      font-size: 10px;
+      font-weight: 700;
       color: var(--accent-color);
     }
     .contact-info {
       display: flex;
       flex-direction: column;
-      gap: 3px;
+      gap: 2px;
       font-size: 9px;
       text-align: right;
     }
@@ -107,7 +107,7 @@
       font-size: 9px;
     }
     .contact-item a, .contact-item span {
-      color: white;
+      color: var(--text-color);
       text-decoration: none;
       font-weight: 500;
     }
@@ -116,24 +116,32 @@
     }
     .content {
       display: flex;
-      gap: 8px;
+      gap: 10px;
+      margin-top: 5px;
     }
     .left-column { flex: 6; }
     .right-column { flex: 4; }
-    .section { margin-bottom: 6px; }
+    .section { margin-bottom: 8px; }
     .section-title {
-      font-size: 12px;
+      font-size: 14px;
       font-weight: 700;
       color: var(--primary-color);
       text-transform: uppercase;
       border-bottom: 1px solid var(--secondary-color);
       padding-bottom: 2px;
-      margin-bottom: 3px;
-      letter-spacing: 0.4px;
+      margin-bottom: 4px;
+      letter-spacing: 0.5px;
     }
-    .job, .education-item, .project { margin-bottom: 3px; }
-    .job-title, .school-name, .project-title {
-      font-size: 12px;
+    .job, .education-item, .project { margin-bottom: 4px; }
+    .job-title {
+      font-size: 13px;
+      font-weight: 600;
+      color: var(--text-color);
+      display: inline-block;
+      width: 100%;
+    }
+    .school-name, .project-title {
+      font-size: 13px;
       font-weight: 600;
       color: var(--text-color);
     }
@@ -141,27 +149,33 @@
       font-weight: 400;
       font-style: italic;
       color: var(--primary-color);
-      margin-left: 2px;
+      margin-left: 3px;
     }
-    .job-period, .education-period {
+    .job-period {
+      display: inline-block;
+      font-weight: 600;
+      font-size: 12px;
+      color: #555;
+      float: right;
+    }
+    .education-period {
       float: right;
       font-weight: 600;
-      font-size: 11px;
+      font-size: 12px;
       color: #555;
     }
     ul {
-      padding-left: 12px;
+      padding-left: 15px;
       margin: 2px 0;
     }
     li {
       margin-bottom: 2px;
       text-align: justify;
-      font-size: 11px;
     }
     p {
       margin: 2px 0;
       text-align: justify;
-      font-size: 11px;
+      font-size: 13px;
     }
     strong {
       font-weight: 700;
@@ -169,37 +183,39 @@
     }
     #downloadButton {
       display: block;
-      width: 180px;
-      margin: 8px auto;
-      padding: 6px;
+      width: 200px;
+      margin: 10px auto;
+      padding: 8px;
       background-color: var(--primary-color);
       color: white;
       text-align: center;
       border-radius: 4px;
       cursor: pointer;
       font-weight: 600;
-      font-size: 12px;
+      font-size: 14px;
       border: none;
       transition: background-color 0.3s ease;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     }
     #downloadButton:hover {
       background-color: var(--secondary-color);
     }
-    .skills-list ul li { margin-bottom: 2px; font-size: 11px; }
+    .skills-list ul li { margin-bottom: 3px; }
     @media print {
       body { background: none; }
       .container {
         box-shadow: none;
         margin: 0;
-        padding: 6mm;
+        padding: 0 8mm 8mm 8mm;
         width: 100%;
         height: 100%;
       }
       #downloadButton { display: none; }
-      header { background: none; color: var(--text-color); }
+      header {
+        border-bottom: 2px solid var(--primary-color);
+      }
       .contact-item a, .contact-item span { color: var(--text-color); }
-      .profile-title { color: var(--primary-color); }
+      .profile-title { color: var(--accent-color); }
     }
     @media (max-width: 768px) {
       .content { flex-direction: column; }
@@ -207,12 +223,12 @@
       header {
         flex-direction: column;
         align-items: flex-start;
-        gap: 5px;
-        padding: 3px 6px;
+        gap: 4px;
+        padding: 2px 5px;
       }
       .contact-info { text-align: left; align-items: flex-start; }
-      .profile-image { width: 32px; height: 32px; }
-      .profile-image-fallback { width: 32px; height: 32px; line-height: 32px; }
+      .profile-image { width: 40px; height: 40px; }
+      .profile-image-fallback { width: 40px; height: 40px; line-height: 40px; }
     }
   </style>
 </head>
@@ -226,7 +242,7 @@
         </div>
         <div class="profile-details">
           <div class="profile-name">CHANDAN KUMAR</div>
-          <div class="profile-title">Data Scientist | IIT Dhanbad Graduate</div>
+          <div class="profile-title"><strong>Data Scientist | IIT Dhanbad Graduate</strong></div>
         </div>
       </div>
       <div class="contact-info">
@@ -253,20 +269,16 @@
         <div class="section">
           <div class="section-title">Experience</div>
           <div class="job">
-            <div class="job-title"><strong>IBM</strong> - Data Scientist</div>
-            <div class="job-period">Mar 2024 - Present</div>
+            <div class="job-title"><strong>IBM</strong> - Data Scientist <span class="job-period">| Mar 2024 - Present</span></div>
           </div>
           <div class="job">
-            <div class="job-title"><strong>Accenture</strong> - Data Scientist</div>
-            <div class="job-period">Apr 2021 - Feb 2024</div>
+            <div class="job-title"><strong>Accenture</strong> - Data Scientist <span class="job-period">| Apr 2021 - Feb 2024</span></div>
           </div>
           <div class="job">
-            <div class="job-title"><strong>Capgemini</strong> - Process Lead</div>
-            <div class="job-period">Feb 2021 - Mar 2021</div>
+            <div class="job-title"><strong>Capgemini</strong> - Process Lead <span class="job-period">| Feb 2021 - Mar 2021</span></div>
           </div>
           <div class="job">
-            <div class="job-title"><strong>Clean Harbors</strong> - Data Scientist</div>
-            <div class="job-period">Jun 2018 - Jan 2021</div>
+            <div class="job-title"><strong>Clean Harbors</strong> - Data Scientist <span class="job-period">| Jun 2018 - Jan 2021</span></div>
           </div>
         </div>
         <div class="section">
