--- a/resume.html
+++ b/resume.html
@@ -111,9 +111,6 @@
       text-decoration: none;
       font-weight: 500;
     }
-    .contact-item a:hover {
-      color: var(--accent-color);
-    }
     .content {
       display: flex;
       gap: 10px;
@@ -131,6 +128,11 @@
       padding-bottom: 2px;
       margin-bottom: 4px;
       letter-spacing: 0.5px;
+    }
+    .section-title i {
+      color: var(--accent-color);
+      margin-right: 1.5mm;
+      font-size: 12px;
     }
     .job, .education-item, .project { margin-bottom: 4px; }
     .job-title {
@@ -157,6 +159,7 @@
       font-size: 12px;
       color: #555;
       float: right;
+      margin-left: 5px;
     }
     .education-period {
       float: right;
@@ -263,26 +266,26 @@
     <div class="content">
       <div class="left-column">
         <div class="section">
-          <div class="section-title">Professional Summary</div>
+          <div class="section-title"><i class="fas fa-user"></i>Professional Summary</div>
           <p><strong>IIT graduate</strong> and <strong>AI Researcher</strong> with around <strong>7 years</strong> of expertise in Data Science, AI, and Product Development, specializing in Generative AI, AI governance, and advanced automation. Proven ability to design, deploy, and optimize AI/ML solutions across finance, banking, energy, and environmental sectors, driving business transformation and efficiency. Skilled in machine learning, deep learning, NLP, and AI-driven automation, with hands-on experience in Python, SQL, LangChain, CrewAI, TensorFlow, PyTorch, and cloud platforms (Azure, AWS, GCP, IBM). Led AI-driven initiatives, driving efficiency, scalability, and innovation across diverse applications. Experienced in AI model deployment, workflow automation, and strategy implementation, delivering measurable business impact.</p>
         </div>
         <div class="section">
-          <div class="section-title">Experience</div>
+          <div class="section-title"><i class="fas fa-briefcase"></i>Experience</div>
           <div class="job">
-            <div class="job-title"><strong>IBM</strong> - Data Scientist <span class="job-period">| Mar 2024 - Present</span></div>
+            <div class="job-title"><strong>IBM</strong> - Data Scientist <span class="job-period">Mar 2024 - Present</span></div>
           </div>
           <div class="job">
-            <div class="job-title"><strong>Accenture</strong> - Data Scientist <span class="job-period">| Apr 2021 - Feb 2024</span></div>
+            <div class="job-title"><strong>Accenture</strong> - Data Scientist <span class="job-period">Apr 2021 - Feb 2024</span></div>
           </div>
           <div class="job">
-            <div class="job-title"><strong>Capgemini</strong> - Process Lead <span class="job-period">| Feb 2021 - Mar 2021</span></div>
+            <div class="job-title"><strong>Capgemini</strong> - Process Lead <span class="job-period">Feb 2021 - Mar 2021</span></div>
           </div>
           <div class="job">
-            <div class="job-title"><strong>Clean Harbors</strong> - Data Scientist <span class="job-period">| Jun 2018 - Jan 2021</span></div>
+            <div class="job-title"><strong>Clean Harbors</strong> - Data Scientist <span class="job-period">Jun 2018 - Jan 2021</span></div>
           </div>
         </div>
         <div class="section">
-          <div class="section-title">Key Projects</div>
+          <div class="section-title"><i class="fas fa-project-diagram"></i>Key Projects</div>
           <div class="project">
             <div class="project-title"><strong>MARC (Multi-Agent Resource Coordinator)</strong>, <span class="company-name">IBM</span></div>
             <ul>
@@ -334,7 +337,7 @@
       </div>
       <div class="right-column">
         <div class="section">
-          <div class="section-title">Education</div>
+          <div class="section-title"><i class="fas fa-graduation-cap"></i>Education</div>
           <div class="education-item">
             <div class="school-name"><strong>IIT Dhanbad</strong> - B.Tech</div>
             <div class="education-period">2013-2017</div>
@@ -345,7 +348,7 @@
           </div>
         </div>
         <div class="section">
-          <div class="section-title">Certifications</div>
+          <div class="section-title"><i class="fas fa-certificate"></i>Certifications</div>
           <ul>
             <li>Northwestern University - Analytics & AI</li>
             <li>IBM - Watsonx.ai Technical Essentials</li>
@@ -363,7 +366,7 @@
           </ul>
         </div>
         <div class="section">
-          <div class="section-title">Key Achievements</div>
+          <div class="section-title"><i class="fas fa-trophy"></i>Key Achievements</div>
           <ul>
             <li>Ranked #1 in HackerRank SQL</li>
             <li>Consistently recognized by clients for error-free, timely project deliveries</li>
@@ -373,7 +376,7 @@
           </ul>
         </div>
         <div class="section">
-          <div class="section-title">Skills</div>
+          <div class="section-title"><i class="fas fa-tools"></i>Skills</div>
           <div class="skills-list">
             <ul>
               <li><strong>Data Science & AI:</strong> Generative AI, Deep Learning, AI Governance, Responsible AI, MLOps, Statistical Analysis, TensorFlow, PyTorch, Scikit-learn, Keras, Hugging Face, LangChain, CrewAI, AutoGen, Bee, Supervised ML, Unsupervised ML, NLP, Time Series, Model Development & Deployment, RAG, Vector DB, Prompt Engineering</li>
@@ -388,7 +391,7 @@
           </div>
         </div>
         <div class="section">
-          <div class="section-title">Core Competencies</div>
+          <div class="section-title"><i class="fas fa-star"></i>Core Competencies</div>
           <ul>
             <li>Project Management and Deployment</li>
             <li>Data Strategy and Management</li>
