--- a/resume.html
+++ b/resume.html
@@ -351,6 +351,7 @@
           <div class="section-title"><i class="fas fa-certificate"></i>Certifications</div>
           <ul>
             <li>Northwestern University - Analytics & AI</li>
+            <li>Hugging Face - AI Agents Fundamentals</li>
             <li>IBM - Watsonx.ai Technical Essentials</li>
             <li>IBM - Watsonx Essentials</li>
             <li>Microsoft & LinkedIn - Generative AI</li>
@@ -396,7 +397,6 @@
             <li>Project Management and Deployment</li>
             <li>Data Strategy and Management</li>
             <li>Business Strategy and Consulting</li>
-            <li>Service Delivery and Execution</li>
             <li>Business and Data Analytics</li>
             <li>Analytics & AI</li>
             <li>Product Management</li>
