--- a/resume.html
+++ b/resume.html
@@ -245,7 +245,7 @@
         </div>
         <div class="profile-details">
           <div class="profile-name">CHANDAN KUMAR</div>
-          <div class="profile-title"><strong>Data Scientist | IIT Graduate</strong></div>
+          <div class="profile-title"><strong>IIT Graduate | Data Scientist</strong></div>
         </div>
       </div>
       <div class="contact-info">
