--- a/resume.html
+++ b/resume.html
@@ -161,8 +161,17 @@
       float: right;
       margin-left: 5px;
     }
+    .education-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+    }
+    .education-details {
+      font-size: 13px;
+      font-weight: 600;
+      color: var(--text-color);
+    }
     .education-period {
-      float: right;
       font-weight: 600;
       font-size: 12px;
       color: #555;
@@ -339,11 +348,11 @@
         <div class="section">
           <div class="section-title"><i class="fas fa-graduation-cap"></i>Education</div>
           <div class="education-item">
-            <div class="school-name"><strong>IIT Dhanbad</strong> - B.Tech</div>
+            <div class="education-details"><strong>IIT Dhanbad</strong> - B.Tech</div>
             <div class="education-period">2013-2017</div>
           </div>
           <div class="education-item">
-            <div class="school-name"><strong>Super30</strong>, Patna</div>
+            <div class="education-details"><strong>Super30</strong>, Patna</div>
             <div class="education-period">2012-2013</div>
           </div>
         </div>
