--- a/resume.html
+++ b/resume.html
@@ -365,14 +365,17 @@
           <div class="section-title"><i class="fas fa-certificate"></i><span>Certifications</span></div>
           <ul>
             <li>Northwestern University - Analytics & AI</li>
+            <li>LangChain Academy - LangGraph</li>
+            <li>Databricks Academy - Generative AI</li>
             <li>Hugging Face - AI Agents Fundamentals</li>
             <li>IBM - Watsonx.ai Technical Essentials</li>
+            <li>Neo4j - Neo4j & LLM Fundamentals</li>
             <li>IBM - Watsonx Essentials</li>
             <li>Microsoft & LinkedIn - Generative AI</li>
             <li>Microsoft - Azure Machine Learning</li>
             <li>Stanford University - Machine Learning</li>
             <li>Duke University - DevOps, DataOps, MLOps</li>
-            <li>Neo4j - Neo4j & LLM Fundamentals</li>
+            <li>LangChain Academy - LangSmith</li>
             <li>AWS - AWS Cloud</li>
             <li>Udemy - Project Management Fundamentals</li>
             <li>Udemy - Product Management Fundamentals</li>
@@ -385,7 +388,6 @@
           <ul>
             <li>Ranked #1 in HackerRank SQL</li>
             <li>Consistently recognized by clients for error-free, timely project deliveries</li>
-            <li>Led a team of five analysts, restoring team credibility and stability</li>
             <li>Cleared IIT JEE-2013, ranking in the top 1% of JEE Advanced qualifiers</li>
             <li>Served as Student Representative in Mess Committee, IIT Dhanbad (2015-2016)</li>
           </ul>
@@ -394,7 +396,7 @@
           <div class="section-title"><i class="fas fa-tools"></i><span>Skills</span></div>
           <div class="skills-list">
             <ul>
-              <li><strong>Data Science & AI:</strong> Generative AI, Deep Learning, AI Governance, Responsible AI, MLOps, Statistical Analysis, TensorFlow, PyTorch, Scikit-learn, Keras, Hugging Face, LangChain, CrewAI, AutoGen, Bee, Supervised ML, Unsupervised ML, NLP, Time Series, Model Development & Deployment, RAG, Vector DB, Prompt Engineering</li>
+              <li><strong>Data Science & AI:</strong> Generative AI, Deep Learning, AI Governance, Responsible AI, MLOps, Statistical Analysis, TensorFlow, PyTorch, Scikit-learn, Keras, Hugging Face, LangChain, LangGraph, LangSmith, Langflow, CrewAI, AutoGen, Bee, Supervised ML, Unsupervised ML, NLP, Time Series, Model Development & Deployment, RAG, Vector DB, Prompt Engineering</li>
               <li><strong>Cloud Platforms:</strong> Azure, AWS, GCP, IBM</li>
               <li><strong>Programming:</strong> Python, SQL</li>
               <li><strong>Data Engineering:</strong> Azure Data Factory, Databricks, Azure Synapse Analytics, AWS S3, Glue, SageMaker, BigQuery, Pandas, NumPy</li>
