--- a/resume.html
+++ b/resume.html
@@ -410,9 +410,9 @@
         <div class="section">
           <div class="section-title"><i class="fas fa-star"></i><span>Core Competencies</span></div>
           <ul>
-            <li>Project Management and Deployment</li>
+            <li>Data Science, Analytics & AI</li>
             <li>Business and Data Analytics</li>
-            <li>Analytics & AI</li>
+            <li>Project Management and Deployment</li>
             <li>Product Management</li>
           </ul>
         </div>
