--- a/resume.html
+++ b/resume.html
@@ -10,8 +10,8 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
     :root {
-      --primary-color: #1E88E5;
-      --secondary-color: #42A5F5;
+      --primary-color: #0D47A1;
+      --secondary-color: #1976D2;
       --accent-color: #FFCA28;
       --text-color: #212121;
       --light-gray: #F5F5F5;
