--- a/test.html
+++ b/test.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Chandan Kumar - Data Scientist</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-
     :root {
       --primary: #0A3D62;
       --accent: #FF9F43;
@@ -21,7 +20,7 @@
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       font-family: 'Inter', sans-serif;
-      background: var(--light);
+      background-color: var(--light);
       color: var(--text);
       line-height: 1.5;
       font-size: 12px;
@@ -29,21 +28,21 @@
 
     .container {
       width: 210mm;
-      max-width: 100%;
-      margin: 10px auto;
+      height: 297mm;
+      margin: 0 auto;
       background: white;
-      padding: 12px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+      padding: 8mm;
       border-radius: 10px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.08);
     }
 
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 8px 12px;
+      padding: 4px 6px;
+      margin-bottom: 6px;
       border-bottom: 2px solid var(--primary);
-      margin-bottom: 10px;
     }
 
     .profile-section {
@@ -56,14 +55,8 @@
       width: 56px;
       height: 56px;
       border-radius: 50%;
-      border: 2px solid var(--border);
       overflow: hidden;
-    }
-
-    .profile-image img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+      border: 2px solid var(--border);
     }
 
     .profile-details {
@@ -101,16 +94,10 @@
       font-size: 10px;
     }
 
-    .contact-item a, .contact-item span {
-      color: var(--text);
-      text-decoration: none;
-      font-weight: 500;
-    }
-
     .content {
       display: flex;
       gap: 12px;
-      margin-top: 10px;
+      margin-top: 8px;
     }
 
     .left-column, .right-column {
@@ -142,7 +129,7 @@
       margin-bottom: 6px;
     }
 
-    .job-title, .school-name, .project-title {
+    .job-title {
       font-size: 12px;
       font-weight: 600;
       color: var(--text);
@@ -155,7 +142,7 @@
       margin-left: 4px;
     }
 
-    .job-period, .education-period {
+    .job-period {
       font-size: 11px;
       color: #555;
       float: right;
@@ -215,109 +202,175 @@
 </head>
 <body>
   <div class="container" id="resumeContent">
-    <!-- Header (Same as original) -->
-    <!-- ... [Keep your header HTML] ... -->
-
-    <!-- Left Column -->
-    <div class="left-column">
-      <!-- Professional Summary -->
-      <div class="section">
-        <div class="section-title"><i class="fas fa-user-tie"></i>Professional Summary</div>
-        <p>IIT Dhanbad graduate with 7+ years of experience driving data science and AI innovation across finance, energy, and environmental sectors. Expertise in Generative AI, MLOps, NLP, and cloud platforms (Azure, AWS, GCP, IBM Watsonx.ai). Proven track record in deploying scalable solutions that reduce costs, automate workflows, and deliver actionable insights.</p>
-      </div>
-
-      <!-- Experience -->
-      <div class="section">
-        <div class="section-title"><i class="fas fa-briefcase"></i>Experience</div>
-        <div class="job">
-          <div class="job-title">IBM - Data Scientist <span class="job-period">Mar 2024 - Present</span></div>
+    <!-- Header -->
+    <header>
+      <div class="profile-section">
+        <div class="profile-image">
+          <img src="ck.jpg" alt="Chandan Kumar" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';"/>
+          <div class="profile-image-fallback">Image Not Available</div>
         </div>
-        <div class="job">
-          <div class="job-title">Accenture - Data Scientist <span class="job-period">Apr 2021 - Feb 2024</span></div>
-        </div>
-        <div class="job">
-          <div class="job-title">Capgemini - Process Lead <span class="job-period">Feb 2021 - Mar 2021</span></div>
-        </div>
-        <div class="job">
-          <div class="job-title">Clean Harbors - Data Scientist <span class="job-period">Jun 2018 - Jan 2021</span></div>
+        <div class="profile-details">
+          <div class="profile-name">CHANDAN KUMAR</div>
+          <div class="profile-title"><strong>IIT Graduate | Data Scientist | Generative AI Expert</strong></div>
         </div>
       </div>
+      <div class="contact-info">
+        <div class="contact-item">
+          <span class="icon"><i class="fas fa-phone"></i></span>
+          <span>+91-9199000200</span>
+        </div>
+        <div class="contact-item">
+          <span class="icon"><i class="fas fa-envelope"></i></span>
+          <a href="mailto:ckism.iit@gmail.com">ckism.iit@gmail.com</a>
+        </div>
+        <div class="contact-item">
+          <span class="icon"><i class="fab fa-linkedin-in"></i></span>
+          <a href="https://www.linkedin.com/in/chandaniit" target="_blank">linkedin.com/in/chandaniit</a>
+        </div>
+      </div>
+    </header>
 
-      <!-- Key Projects -->
-      <div class="section">
-        <div class="section-title"><i class="fas fa-project-diagram"></i>Key Projects</div>
-        <div class="project">
-          <div class="project-title">MARC (Multi-Agent Resource Coordinator) <span class="company-name">IBM</span></div>
+    <!-- Content -->
+    <div class="content">
+      <!-- Left Column -->
+      <div class="left-column">
+        <!-- Professional Summary -->
+        <div class="section">
+          <div class="section-title"><i class="fas fa-user-tie"></i>Professional Summary</div>
+          <p>IIT Dhanbad graduate with 7+ years of experience driving data science and AI innovation across finance, energy, and environmental sectors. Expertise in Generative AI, MLOps, NLP, and cloud platforms (Azure, AWS, GCP, IBM Watsonx.ai). Proven track record in deploying scalable solutions that reduce costs, automate workflows, and deliver actionable insights.</p>
+        </div>
+
+        <!-- Experience -->
+        <div class="section">
+          <div class="section-title"><i class="fas fa-briefcase"></i>Experience</div>
+          <div class="job">
+            <div class="job-title">IBM - Data Scientist <span class="job-period">Mar 2024 - Present</span></div>
+          </div>
+          <div class="job">
+            <div class="job-title">Accenture - Data Scientist <span class="job-period">Apr 2021 - Feb 2024</span></div>
+          </div>
+          <div class="job">
+            <div class="job-title">Capgemini - Process Lead <span class="job-period">Feb 2021 - Mar 2021</span></div>
+          </div>
+          <div class="job">
+            <div class="job-title">Clean Harbors - Data Scientist <span class="job-period">Jun 2018 - Jan 2021</span></div>
+          </div>
+        </div>
+
+        <!-- Key Projects -->
+        <div class="section">
+          <div class="section-title"><i class="fas fa-project-diagram"></i>Key Projects</div>
+          <div class="project">
+            <div class="job-title">MARC (Multi-Agent Resource Coordinator) <span class="company-name">IBM</span><span class="job-period">Mar 2024 - Present</span></div>
+            <ul>
+              <li>Led development of multi-agent workflows for enterprise automation using LLMs.</li>
+              <li>Integrated AI governance frameworks to ensure compliance and ethical behavior.</li>
+              <li>Improved workflow efficiency by 35% through intelligent agent orchestration.</li>
+            </ul>
+          </div>
+          <div class="project">
+            <div class="job-title">PdfGPT for Mizuho Bank <span class="company-name">Accenture</span><span class="job-period">Apr 2021 - Feb 2024</span></div>
+            <ul>
+              <li>Created AI-powered summarization tool reducing document review time by 30%.</li>
+              <li>Enabled chat-based PDF interaction for client stakeholders.</li>
+            </ul>
+          </div>
+          <div class="project">
+            <div class="job-title">Ulster Bank Customer Segmentation <span class="company-name">Accenture</span><span class="job-period">Apr 2021 - Feb 2024</span></div>
+            <ul>
+              <li>Automated ML pipelines for customer segmentation algorithms using Python, Glue, and Athena.</li>
+              <li>Created and validated Data Models, deriving insights for client stakeholders.</li>
+            </ul>
+          </div>
+          <!-- Add remaining projects similarly -->
+        </div>
+      </div>
+
+      <!-- Right Column -->
+      <div class="right-column">
+        <!-- Education -->
+        <div class="section">
+          <div class="section-title"><i class="fas fa-graduation-cap"></i>Education</div>
+          <div class="education-item">
+            <div class="school-name">IIT Dhanbad - B.Tech</div>
+            <div class="education-period">2013-2017</div>
+          </div>
+          <div class="education-item">
+            <div class="school-name">Super30, Patna</div>
+            <div class="education-period">2012-2013</div>
+          </div>
+        </div>
+
+        <!-- Certifications -->
+        <div class="section">
+          <div class="section-title"><i class="fas fa-certificate"></i>Certifications</div>
           <ul>
-            <li>Led development of multi-agent workflows for enterprise automation using LLMs.</li>
-            <li>Integrated AI governance frameworks to ensure compliance and ethical behavior.</li>
-            <li>Improved workflow efficiency by 35% through intelligent agent orchestration.</li>
+            <li>Northwestern University - Analytics & AI</li>
+            <li>Stanford - Machine Learning (Coursera)</li>
+            <li>LangChain Academy - LangGraph, LangSmith</li>
+            <li>Hugging Face - AI Agents Fundamentals</li>
+            <li>AWS Certified Cloud Practitioner</li>
+            <!-- Add others... -->
           </ul>
         </div>
-        <div class="project">
-          <div class="project-title">PdfGPT for Mizuho Bank <span class="company-name">Accenture</span></div>
+
+        <!-- Skills -->
+        <div class="section">
+          <div class="section-title"><i class="fas fa-tools"></i>Skills</div>
           <ul>
-            <li>Created AI-powered summarization tool reducing document review time by 30%.</li>
-            <li>Enabled chat-based PDF interaction for client stakeholders.</li>
+            <li><strong>AI/ML:</strong> Generative AI, RAG, LangChain, TensorFlow, PyTorch</li>
+            <li><strong>Cloud:</strong> Azure, AWS, GCP, IBM Watsonx.ai</li>
+            <li><strong>Tools:</strong> Docker, Kubernetes, Git, Power BI</li>
+            <li><strong>Domains:</strong> Finance, Banking, Environmental Tech</li>
           </ul>
         </div>
-        <!-- Add other projects similarly -->
-      </div>
-    </div>
 
-    <!-- Right Column -->
-    <div class="right-column">
-      <!-- Education -->
-      <div class="section">
-        <div class="section-title"><i class="fas fa-graduation-cap"></i>Education</div>
-        <div class="education-item">
-          <div class="school-name">IIT Dhanbad - B.Tech</div>
-          <div class="education-period">2013-2017</div>
+        <!-- Achievements -->
+        <div class="section">
+          <div class="section-title"><i class="fas fa-trophy"></i>Achievements</div>
+          <ul>
+            <li>Top 1% JEE Advanced Qualifier</li>
+            <li>#1 Rank - HackerRank SQL Challenges</li>
+            <li>Recognized for error-free deliveries at Accenture & IBM</li>
+          </ul>
         </div>
-        <div class="education-item">
-          <div class="school-name">Super30, Patna</div>
-          <div class="education-period">2012-2013</div>
-        </div>
-      </div>
-
-      <!-- Certifications -->
-      <div class="section">
-        <div class="section-title"><i class="fas fa-certificate"></i>Certifications</div>
-        <ul>
-          <li>Northwestern University - Analytics & AI</li>
-          <li>Stanford - Machine Learning (Coursera)</li>
-          <li>LangChain Academy - LangGraph, LangSmith</li>
-          <li>Hugging Face - AI Agents Fundamentals</li>
-          <li>AWS Certified Cloud Practitioner</li>
-          <!-- Add others... -->
-        </ul>
-      </div>
-
-      <!-- Skills -->
-      <div class="section">
-        <div class="section-title"><i class="fas fa-tools"></i>Skills</div>
-        <ul>
-          <li><strong>AI/ML:</strong> Generative AI, RAG, LangChain, TensorFlow, PyTorch</li>
-          <li><strong>Cloud:</strong> Azure, AWS, GCP, IBM Watsonx.ai</li>
-          <li><strong>Tools:</strong> Docker, Kubernetes, Git, Power BI</li>
-          <li><strong>Domains:</strong> Finance, Banking, Environmental Tech</li>
-        </ul>
-      </div>
-
-      <!-- Achievements -->
-      <div class="section">
-        <div class="section-title"><i class="fas fa-trophy"></i>Achievements</div>
-        <ul>
-          <li>Top 1% JEE Advanced Qualifier</li>
-          <li>#1 Rank - HackerRank SQL Challenges</li>
-          <li>Recognized for error-free deliveries at Accenture & IBM</li>
-        </ul>
       </div>
     </div>
   </div>
   <button id="downloadButton" onclick="downloadPDF()">Download Resume as PDF</button>
   <script>
-    // Same download script as before
+    async function downloadPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF({ orientation: 'portrait', unit: 'mm', format: 'a4', compress: true });
+      const element = document.getElementById('resumeContent');
+      try {
+        const button = document.getElementById('downloadButton');
+        button.innerHTML = "Generating PDF...";
+        button.disabled = true;
+        const canvas = await html2canvas(element, {
+          scale: 3,
+          useCORS: true,
+          logging: false,
+          backgroundColor: '#ffffff',
+          windowHeight: element.scrollHeight
+        });
+        const imgWidth = 210;
+        const pageHeight = 297;
+        const imgHeight = canvas.height * imgWidth / canvas.width;
+        const imgData = canvas.toDataURL('image/jpeg', 0.9);
+        let heightRatio = pageHeight / imgHeight;
+        let adjustedHeight = imgHeight * heightRatio;
+        doc.addImage(imgData, 'JPEG', 0, 0, imgWidth, adjustedHeight, undefined, 'FAST');
+        doc.save('Chandan_Kumar_Resume.pdf');
+        button.innerHTML = "Download Resume as PDF";
+        button.disabled = false;
+      } catch (error) {
+        console.error('Error generating PDF:', error);
+        alert('Failed to generate PDF. Please try again.');
+        button.innerHTML = "Download Resume as PDF";
+        button.disabled = false;
+      }
+    }
   </script>
 </body>
 </html>
