--- a/test.html
+++ b/test.html
@@ -143,7 +143,6 @@
       font-size: 13px;
       font-weight: 700;
       color: var(--text-color);
-      display: inline-block;
     }
     .school-name, .project-title {
       font-size: 13px;
@@ -289,7 +288,7 @@
       <div class="left-column">
         <div class="section">
           <div class="section-title"><i class="fas fa-user"></i><span>Professional Summary</span></div>
-          <p><strong>IIT graduate</strong> and <strong>Data Scientist</strong> with around <strong>7 years</strong> of expertise in Data Science, AI, and Product Development, specializing in Generative AI, AI governance, and advanced automation. Proven ability to design, deploy, and optimize AI/ML solutions across finance, banking, energy, and environmental sectors, driving business transformation and efficiency.</p>
+          <p><strong>IIT graduate</strong> and <strong>Data Scientist</strong> with around <strong>7 years</strong> of expertise in Data Science, AI, and Product Development, specializing in Generative AI, AI governance, and advanced automation. Proven ability to design, deploy, and optimize AI/ML solutions across finance, banking, energy, and environmental sectors, driving business transformation and efficiency. Skilled in machine learning, deep learning, NLP, and AI-driven automation, with hands-on experience in Python, SQL, LangChain, CrewAI, TensorFlow, PyTorch, and cloud platforms (Azure, AWS, GCP, IBM). Led AI-driven initiatives, driving efficiency, scalability, and innovation across diverse applications. Experienced in AI model deployment, workflow automation, and strategy implementation, delivering measurable business impact.</p>
         </div>
         <div class="section">
           <div class="section-title"><i class="fas fa-briefcase"></i><span>Experience</span></div>
@@ -313,12 +312,46 @@
             <ul>
               <li>Developed and deployed multiple agents for IBM's MARC platform, enhancing multi-agent collaboration and workflow automation.</li>
               <li>Applied AI Governance principles to ensure ethical and compliant operations of automation agents.</li>
+              <li>Utilized advanced Large Language Models (LLMs) for intelligent task orchestration and agent selection.</li>
+              <li>Streamlined enterprise workflows with a scalable multi-agent AI system.</li>
             </ul>
           </div>
           <div class="project">
             <div class="project-title"><strong>Mizuho Bank</strong>, <span class="company-name">Accenture</span></div>
             <ul>
-              <li>Developed PdfGPT, an AI-powered text summarization system, reducing document review time by 30%.</li>
+              <li>Developed and deployed PdfGPT, an AI-powered text summarization system, enhancing document processing workflows.</li>
+              <li>Implemented key feature extraction capabilities and PDF text summarization through interactive chat functionality.</li>
+              <li>Reduced document review time by 30% with AI-driven system.</li>
+            </ul>
+          </div>
+          <div class="project">
+            <div class="project-title"><strong>Ulster Bank</strong>, <span class="company-name">Accenture</span></div>
+            <ul>
+              <li>Automated machine learning pipelines for customer segmentation algorithms using Python, Glue, and Athena.</li>
+              <li>Created and validated Data Models, deriving meaningful insights and explaining them to client stakeholders.</li>
+            </ul>
+          </div>
+          <div class="project">
+            <div class="project-title"><strong>Facebook</strong>, <span class="company-name">Accenture</span></div>
+            <ul>
+              <li>Examined data from multiple disparate sources to discover insights providing competitive advantage for clients.</li>
+              <li>Designed and optimized machine learning pipelines, specializing in the creation of forecasting models.</li>
+              <li>Leveraged Machine Learning, Python, Glue, Athena, and Sagemaker to enhance decision-making processes.</li>
+            </ul>
+          </div>
+          <div class="project">
+            <div class="project-title"><strong>Waste Classification Code</strong>, <span class="company-name">Clean Harbors</span></div>
+            <ul>
+              <li>Designed and fine-tuned Waste Classification Code Prediction models, enabling autonomous WCC assignment.</li>
+              <li>Created a unified dataset encompassing vital features for all waste classes.</li>
+              <li>Applied logical data checks for input consistency, facilitating classification based on physical properties.</li>
+            </ul>
+          </div>
+          <div class="project">
+            <div class="project-title"><strong>Invoice Audit</strong>, <span class="company-name">Clean Harbors</span></div>
+            <ul>
+              <li>Developed an invoice auditing and revenue prediction algorithm using machine learning and statistical analysis.</li>
+              <li>Streamlined invoice verification, reducing audit time by 20%.</li>
             </ul>
           </div>
         </div>
@@ -331,24 +364,65 @@
             <div class="education-details"><strong>IIT Dhanbad</strong> - B.Tech</div>
             <div class="education-period">2013-2017</div>
           </div>
+          <div class="education-item">
+            <div class="education-details"><strong>Super30</strong>, Patna</div>
+            <div class="education-period">2012-2013</div>
+          </div>
         </div>
         <div class="section">
           <div class="section-title"><i class="fas fa-certificate"></i><span>Certifications</span></div>
           <ul>
             <li>Northwestern University - Analytics & AI</li>
+            <li>LangChain Academy - LangGraph</li>
             <li>Databricks Academy - Generative AI</li>
+            <li>Hugging Face - AI Agents Fundamentals</li>
+            <li>IBM - Watsonx.ai Technical Essentials</li>
+            <li>Neo4j - Neo4j & LLM Fundamentals</li>
+            <li>IBM - Watsonx Essentials</li>
+            <li>Microsoft & LinkedIn - Generative AI</li>
+            <li>Microsoft - Azure Machine Learning</li>
             <li>Stanford University - Machine Learning</li>
+            <li>Duke University - DevOps, DataOps, MLOps</li>
+            <li>LangChain Academy - LangSmith</li>
+            <li>AWS - AWS Cloud</li>
+            <li>Udemy - Project Management Fundamentals</li>
+            <li>Udemy - Product Management Fundamentals</li>
+            <li>Udemy - MCP (Model Context Protocol)</li>
+            <li>Microsoft - SQL Server</li>
+          </ul>
+        </div>
+        <div class="section">
+          <div class="section-title"><i class="fas fa-trophy"></i><span>Key Achievements</span></div>
+          <ul>
+            <li>Ranked #1 in HackerRank SQL</li>
+            <li>Consistently recognized by clients for error-free, timely project deliveries</li>
+            <li>Cleared IIT JEE-2013, ranking in the top 1% of JEE Advanced qualifiers</li>
+            <li>Served as Student Representative in Mess Committee, IIT Dhanbad (2015-2016)</li>
           </ul>
         </div>
         <div class="section">
           <div class="section-title"><i class="fas fa-tools"></i><span>Skills</span></div>
           <div class="skills-list">
             <ul>
-              <li><strong>Data Science & AI:</strong> Generative AI, Deep Learning, MLOps, NLP, LangChain, TensorFlow, PyTorch</li>
-              <li><strong>Cloud Platforms:</strong> Azure, AWS, GCP</li>
+              <li><strong>Data Science & AI:</strong> Generative AI, Deep Learning, AI Governance, Responsible AI, MLOps, Statistical Analysis, TensorFlow, PyTorch, Scikit-learn, Keras, Hugging Face, LangChain, LangGraph, LangSmith, Langflow, CrewAI, AutoGen, Bee, Supervised ML, Unsupervised ML, NLP, Time Series, Model Development & Deployment, RAG, Vector DB, Prompt Engineering</li>
+              <li><strong>Cloud Platforms:</strong> Azure, AWS, GCP, IBM</li>
               <li><strong>Programming:</strong> Python, SQL</li>
+              <li><strong>Data Engineering:</strong> Azure Data Factory, Databricks, Azure Synapse Analytics, AWS S3, Glue, SageMaker, BigQuery, Pandas, NumPy</li>
+              <li><strong>Databases:</strong> Azure SQL, SQL Server, MySQL, MongoDB, BigQuery</li>
+              <li><strong>Visualization:</strong> Power BI, Matplotlib, Seaborn</li>
+              <li><strong>DevOps:</strong> Docker, Kubernetes, Git, CI/CD</li>
+              <li><strong>Domains:</strong> Finance, Banking, Environmental, Social Media, Waste Management, Energy</li>
             </ul>
           </div>
+        </div>
+        <div class="section">
+          <div class="section-title"><i class="fas fa-star"></i><span>Core Competencies</span></div>
+          <ul>
+            <li>Data Science, Analytics & AI</li>
+            <li>Business and Data Analytics</li>
+            <li>Project Management and Deployment</li>
+            <li>Product Management</li>
+          </ul>
         </div>
       </div>
     </div>
