--- a/test.html
+++ b/test.html
@@ -253,7 +253,7 @@
     <div class="content">
       <div class="left-column">
         <div class="section">
-          <div class="section-title"><i class="fas fa-user"></i><span>Professional Summary</span></div>
+          <div class="section-title"><i class="fas fa-user-tie"></i><span>Professional Summary</span></div>
           <p><strong>IIT graduate</strong> and <strong>Data Scientist</strong> with around <strong>7 years</strong> of expertise in Data Science, AI, and Product Development, specializing in Generative AI, AI governance, and advanced automation. Proven ability to design, deploy, and optimize AI/ML solutions across finance, banking, energy, and environmental sectors, driving business transformation and efficiency. Skilled in machine learning, deep learning, NLP, and AI-driven automation, with hands-on experience in Python, SQL, LangChain, CrewAI, TensorFlow, PyTorch, and cloud platforms (Azure, AWS, GCP, IBM). Led AI-driven initiatives, driving efficiency, scalability, and innovation across diverse applications. Experienced in AI model deployment, workflow automation, and strategy implementation, delivering measurable business impact.</p>
         </div>
         <div class="section">
