--- a/resume.html
+++ b/resume.html
@@ -362,7 +362,7 @@
           </div>
         </div>
         <div class="section">
-          <div class="section-title"><i class="fas fa-certificate"></i><span>Certifications</span></div>
+          <div class="section-title"><i class="fas fa-award"></i><span>Certifications</span></div>
           <ul>
             <li>Northwestern University - Analytics & AI</li>
             <li>LangChain Academy - LangGraph</li>
